<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<packaging>war</packaging>
	<version>1.0</version>

	<groupId>br.com.alinesoftware</groupId>
	<artifactId>aline-skeleton</artifactId>

	<url>http://maven.apache.org</url>

	<repositories>
		<repository>
			<id>java.net</id>
			<url>http://download.java.net/maven/2</url>
		</repository>
		<repository>
			<id>prime-repo</id>
			<name>PrimeFaces Maven Repository</name>
			<url>http://repository.primefaces.org</url>
			<layout>default</layout>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>maven-gae-plugin-repo</id>
			<name>maven-gae-plugin repository</name>
			<url>http://maven-gae-plugin.googlecode.com/svn/repository</url>
		</pluginRepository>
	</pluginRepositories>

	<properties>
		<appengine.app.appId>marthalanches</appengine.app.appId>
		<appengine.app.version>1</appengine.app.version>
		<appengine.target.version>1.8.1</appengine.target.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<cloudsql.url>jdbc:google:mysql://your-instance-name/demo?user=root</cloudsql.url>
		<cloudsql.url.dev>jdbc:mysql://localhost:3306/aline?user=root</cloudsql.url.dev>
	</properties>

	<dependencies>
		<!-- Compile/runtime dependencies -->
		<dependency>
			<groupId>com.google.appengine</groupId>
			<artifactId>appengine-api-1.0-sdk</artifactId>
			<version>${appengine.target.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jstl</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.web</groupId>
			<artifactId>el-impl</artifactId>
			<version>2.2</version>
		</dependency>
		<dependency>
			<groupId>com.sun.el</groupId>
			<artifactId>el-ri</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.25</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>4.2.0.Final</version>
		</dependency>
		<dependency>
			<groupId>com.sun.faces</groupId>
			<artifactId>jsf-api</artifactId>
			<version>2.2.4</version>
		</dependency>
		<dependency>
			<groupId>com.sun.faces</groupId>
			<artifactId>jsf-impl</artifactId>
			<version>2.2.4</version>
		</dependency>
		<dependency>
			<groupId>org.primefaces</groupId>
			<artifactId>primefaces</artifactId>
			<version>5.0</version>
		</dependency>
		<dependency>
			<groupId>org.primefaces.themes</groupId>
			<artifactId>bootstrap</artifactId>
			<version>1.0.10</version>
		</dependency>
		<!-- Test Dependencies -->
		<dependency>
			<groupId>com.google.appengine</groupId>
			<artifactId>appengine-testing</artifactId>
			<version>${appengine.target.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.appengine</groupId>
			<artifactId>appengine-api-stubs</artifactId>
			<version>${appengine.target.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
	    <outputDirectory>target/${project.artifactId}-${project.version}/WEB-INF/classes</outputDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<version>2.5.1</version>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<archiveClasses>true</archiveClasses>
					<webResources>
						<!-- in order to interpolate version from pom into appengine-web.xml -->
						<resource>
							<directory>${basedir}/src/main/webapp/WEB-INF</directory>
							<filtering>true</filtering>
							<targetPath>WEB-INF</targetPath>
						</resource>
					</webResources>
				</configuration>
			</plugin>

			<plugin>
				<groupId>com.google.appengine</groupId>
				<artifactId>appengine-maven-plugin</artifactId>
				<version>${appengine.target.version}</version>
				<configuration>
					<compileEncoding>utf-8</compileEncoding>
					<jvmFlags>
						<jvmFlag>-XX:-UseSplitVerifier</jvmFlag>
						<jvmFlag>-Xms512m</jvmFlag>
						<jvmFlag>-Xmx2048m</jvmFlag>
						<jvmFlag>-XX:NewSize=256m</jvmFlag>
						<jvmFlag>-XX:MaxNewSize=256m</jvmFlag>
						<jvmFlag>-XX:PermSize=512m</jvmFlag>
						<jvmFlag>-XX:MaxPermSize=768m</jvmFlag>
						<jvmFlag>-Xdebug</jvmFlag>
						<jvmFlag>-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n</jvmFlag>
					</jvmFlags>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.datanucleus</groupId>
				<artifactId>datanucleus-maven-plugin</artifactId>
				<version>3.3.0-release</version>
				<configuration>
					<api>JPA</api>
					<persistenceUnitName>Demo</persistenceUnitName>
					<log4jConfiguration>${basedir}/log4j.properties</log4jConfiguration>
					<verbose>true</verbose>
				</configuration>
				<!-- <executions> <execution> <phase>process-classes</phase> <goals> 
					<goal>enhance</goal> </goals> </execution> </executions> -->
			</plugin>
		</plugins>
	</build>
</project>